--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
 # quando for executar a aplicação em container mudar o DB_HOST para db_servidores
+DB_HOST=localhost
+DB_DATABASE=api_database
+DB_USER=api_servidores
+DB_PASSWORD=api_password
+DB_PORT=5432
+
 SECRET=chavesecreta
-DB_HOST=smtp.zoho.com
-DB_PORT=465
-DB_EMAIL=citpcgo@zohomail.com
-DB_PASSWORD=Cit@2020
+HOST=smtp.zoho.com
+PORT=465
+EMAIL=citpcgo@zohomail.com
+PASSWORD=Cit@2020
