--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint-fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -29,7 +28,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.2",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
